add letterboxd project

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 		<h1>Projetos React</h1>
 		<a class="link" href="https://matheus-lima-moreira.github.io/Secret.Word">Secret Word</a>
 		<a class="link" href="https://matheus-lima-moreira.github.io/Miniblog">Miniblog</a>
+		<a class="link" href="https://letterboxd-ff40a.web.app/">Letterboxd</a>
 	</div>
 </body>
 </html>
