--- a/index.html
+++ b/index.html
@@ -539,8 +539,8 @@
           <ul id="portfolio-flters">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-react">React</li>
-            <!-- <li data-filter=".filter-app">App</li> -->
-            <!-- <li data-filter=".filter-card">Card</li> -->
+            <li data-filter=".filter-javascript">JavaScript</li>
+            <li data-filter=".filter-typescript">TypeScript</li>
           </ul>
         </div>
       </div>
