--- a/index.html
+++ b/index.html
@@ -655,7 +655,7 @@
   <script type="module" src="assets/js/portfolioItems.js"></script>
 
   <!-- JQUERY -->
-  <script src="node_modules/jquery/dist/jquery.min.js"></script>
+  <!-- <script src="node_modules/jquery/dist/jquery.min.js"></script> -->
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
