:sparkles: feat: Traduzido PT BR, Novas abas sobre mim e currículo, novo projeto em angular smartfit challenge e adicionando github e removendo instagram

--- a/index.html
+++ b/index.html
@@ -34,15 +34,19 @@
     <div class="container">
 
       <h1><a href="index.html">Matheus Lima</a></h1>
-      <h2>I'm a <span>Fullstack Developer</span></h2>
+      <h2><span>Fullstack Developer</span></h2>
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link active" href="#header">Home</a></li>
-          <!-- <li><a class="nav-link" href="#about">About</a></li> -->
-          <!-- <li><a class="nav-link" href="#resume">Resume</a></li> -->
+          <!-- Home -->
+          <li><a class="nav-link active" href="#header">Início</a></li>
+          <!-- About -->
+          <li><a class="nav-link" href="#about">Sobre mim</a></li>
+          <!-- Resume -->
+          <li><a class="nav-link" href="#resume">Currículo</a></li>
           <!-- <li><a class="nav-link" href="#services">Services</a></li> -->
-          <li><a class="nav-link" href="#portfolio">Portfolio</a></li>
+          <!-- Projects -->
+          <li><a class="nav-link" href="#portfolio">Projetos</a></li>
           <!-- <li><a class="nav-link" href="#contact">Contact</a></li> -->
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
@@ -51,8 +55,9 @@
       <div class="social-links">
         <!-- <a href="https://twitter.com/Matts_z1" target="_blank" class="twitter"><i class="bi bi-twitter"></i></a> -->
         <!-- <a href="https://www.facebook.com/profile.php?id=100007346672241" target="_blank" class="facebook"><i class="bi bi-facebook"></i></a> -->
-        <a href="https://www.instagram.com/matts_z/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a>
+        <a href="https://www.github.com/matheus-lima-moreira" target="_blank" class="github"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/in/matheus-lima-moreira/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+        <!-- <a href="https://www.instagram.com/matts_z/" target="_blank" class="instagram"><i class="bi bi-instagram"></i></a> -->
       </div>
 
     </div>
@@ -66,42 +71,42 @@
     <div class="about-me container">
 
       <div class="section-title">
-        <h2>About</h2>
-        <p>Learn more about me</p>
+        <!-- About -->
+        <h2>Sobre mim</h2>
+        <!-- Learn more about me -->
+        <p>Saiba mais sobre mim</p>
       </div>
 
       <div class="row">
-        <div class="col-lg-4" data-aos="fade-right">
-          <img src="assets/img/me.jpg" class="img-fluid" alt="">
-        </div>
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-          <h3>UI/UX &amp; Graphic Designer</h3>
-          <p class="fst-italic">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-            magna aliqua.
-          </p>
-          <div class="row">
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>1 May 1995</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>New York, USA</span></li>
-              </ul>
-            </div>
-            <div class="col-lg-6">
-              <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>30</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>PhEmailone:</strong> <span>email@example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
-              </ul>
-            </div>
-          </div>
+          <h3>Fullstack Developer</h3>
           <p>
-            Officiis eligendi itaque labore et dolorum mollitia officiis optio vero. Quisquam sunt adipisci omnis et ut. Nulla accusantium dolor incidunt officia tempore. Et eius omnis.
-            Cupiditate ut dicta maxime officiis quidem quia. Sed et consectetur qui quia repellendus itaque neque. Aliquid amet quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis culpa magni laudantium dolores.
+            “The only way to go fast, is to go well.” - Robert C. Martin, Clean Architecture
           </p>
+          <p>
+            Olá me chamo Matheus, sou um desenvolvedor fullstack, apaixonado por tecnologia e inovação. Atualmente estou cursando Análise e Desenvolvimento de Sistemas (5º semestre), e estou sempre em busca de novos desafios e oportunidades para aprender e crescer profissionalmente.
+            Ao longo da minha jornada, tive a oportunidade de trabalhar em projetos desafiadores, que me proporcionaram um grande aprendizado e crescimento profissional.
+            Tenho conhecimento em diversas tecnologias, como: HTML, CSS, JavaScript, TypeScript, React, Angular, PHP, Node.js, Express, MySQL, MongoDB, entre outras.
+            Estou sempre em busca de novos conhecimentos e desafios, e estou sempre disposto a ajudar e compartilhar o que aprendi.
+          </p>
+          <!-- <div class="row">
+            <div class="col-lg-12">
+              <ul>
+                Age
+                <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>20</span></li>
+                Phone
+                <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>(55) +17 991094489</span></li>
+                City
+                <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>São José Do Rio Preto, São Paulo</span></li>
+                Degree
+                working towards a Computer Systems Analyst's degree
+                <li><i class="bi bi-chevron-right"></i> <strong>Formação:</strong> <span>Cursando Análise e Desenvolvimento de Sistemas (5º semestre)</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>6matheuslima@gmail.com</span></li>
+                Available
+                <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponível</span></li>
+              </ul>
+            </div>
+          </div> -->
         </div>
       </div>
 
@@ -109,7 +114,7 @@
     <!-- End About Me -->
 
     <!-- ======= Counts ======= -->
-    <div class="counts container">
+    <!-- <div class="counts container">
 
       <div class="row">
 
@@ -147,11 +152,11 @@
 
       </div>
 
-    </div>
+    </div> -->
     <!-- End Counts -->
 
     <!-- ======= Skills  ======= -->
-    <div class="skills container">
+    <!-- <div class="skills container">
 
       <div class="section-title">
         <h2>Skills</h2>
@@ -169,16 +174,16 @@
           </div>
 
           <div class="progress">
-            <span class="skill">CSS <i class="val">90%</i></span>
+            <span class="skill">JavaScript/TypeScript<i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">JavaScript <i class="val">75%</i></span>
+            <span class="skill">React <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -187,23 +192,23 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">PHP <i class="val">80%</i></span>
+            <span class="skill">CSS/SASS/SCSS/TAILWIND <i class="val">100%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>          
+
+          <div class="progress">
+            <span class="skill">PHP <i class="val">100%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">WordPress/CMS <i class="val">90%</i></span>
+            <span class="skill">Angular <i class="val">50%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100"></div>
-            </div>
-          </div>
-
-          <div class="progress">
-            <span class="skill">Photoshop <i class="val">55%</i></span>
-            <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
 
@@ -211,14 +216,14 @@
 
       </div>
 
-    </div>
+    </div> -->
     <!-- End Skills -->
 
     <!-- ======= Interests ======= -->
-    <div class="interests container">
+    <!-- <div class="interests container">
 
       <div class="section-title">
-        <h2>Interests</h2>
+        <h2>Skills</h2>
       </div>
 
       <div class="row">
@@ -296,11 +301,11 @@
         </div>
       </div>
 
-    </div>
+    </div> -->
     <!-- End Interests -->
 
     <!-- ======= Testimonials ======= -->
-    <div class="testimonials container">
+    <!-- <div class="testimonials container">
 
       <div class="section-title">
         <h2>Testimonials</h2>
@@ -320,7 +325,7 @@
               <h3>Saul Goodman</h3>
               <h4>Ceo &amp; Founder</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -333,7 +338,7 @@
               <h3>Sara Wilsson</h3>
               <h4>Designer</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -346,7 +351,7 @@
               <h3>Jena Karlis</h3>
               <h4>Store Owner</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -359,7 +364,7 @@
               <h3>Matt Brandon</h3>
               <h4>Freelancer</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
           <div class="swiper-slide">
             <div class="testimonial-item">
@@ -372,7 +377,7 @@
               <h3>John Larson</h3>
               <h4>Entrepreneur</h4>
             </div>
-          </div><!-- End testimonial item -->
+          </div>
 
         </div>
         <div class="swiper-pagination"></div>
@@ -382,7 +387,7 @@
 
       </div>
 
-    </div>
+    </div> -->
     <!-- End Testimonials  -->
 
   </section>
@@ -393,64 +398,91 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Resume</h2>
-        <p>Check My Resume</p>
+        <!-- Resume -->
+        <h2>Currículo</h2>
+        <!-- Check My Resume -->
+        <p>Confira meu currículo</p>
       </div>
 
       <div class="row">
         <div class="col-lg-6">
-          <h3 class="resume-title">Sumary</h3>
+          <h3 class="resume-title">Resumo</h3>
           <div class="resume-item pb-0">
-            <h4>Alice Barkley</h4>
-            <p><em>Innovative and deadline-driven Graphic Designer with 3+ years of experience designing and developing user-centered digital/print marketing material from initial concept to final, polished deliverable.</em></p>
+            <h4>Matheus Lima</h4>
+            <p><em>Fullstack Developer</em></p>
             <p>
             <ul>
-              <li>Portland par 127,Orlando, FL</li>
-              <li>(123) 456-7891</li>
-              <li>alice.barkley@example.com</li>
+              <li>São José Do Rio Preto, São Paulo</li>
+              <li>(55) +17 991094489</li>
+              <li>6matheuslima@gmail.com</li>
             </ul>
             </p>
           </div>
 
-          <h3 class="resume-title">Education</h3>
+          <h3 class="resume-title">Formação Acadêmica</h3>
           <div class="resume-item">
-            <h4>Master of Fine Arts &amp; Graphic Design</h4>
-            <h5>2015 - 2016</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Qui deserunt veniam. Et sed aliquam labore tempore sed quisquam iusto autem sit. Ea vero voluptatum qui ut dignissimos deleniti nerada porti sand markend</p>
+            <h4>Tecnólogo em Análise e Desenvolvimento de Sistemas</h4>
+            <h5>2022 - 2024</h5>
+            <p><em>Faculdade de Tecnologia de São José do Rio Preto, SJRP, SP</em></p>
+            <p>Atualmente cursando o 5º semestre do curso de Análise e Desenvolvimento de Sistemas, com foco em desenvolvimento de software e programação.</p>
           </div>
           <div class="resume-item">
-            <h4>Bachelor of Fine Arts &amp; Graphic Design</h4>
-            <h5>2010 - 2014</h5>
-            <p><em>Rochester Institute of Technology, Rochester, NY</em></p>
-            <p>Quia nobis sequi est occaecati aut. Repudiandae et iusto quae reiciendis et quis Eius vel ratione eius unde vitae rerum voluptates asperiores voluptatem Earum molestiae consequatur neque etlon sader mart dila</p>
+            <h4>ETIM | Ensino Médio Integrado ao Técnico em Desenvolvimento de Sistemas</h4>
+            <h5>2019 - 2021</h5>
+            <p><em>ETEC Philadelpho Gouvêa Netto, SJRP, SP</em></p>
+            <p>Formação técnica em desenvolvimento de sistemas juntamento ao ensino médio, com foco em programação e desenvolvimento de software.</p>
+          </div>
+
+          <h3 class="resume-title">Certificações</h3>
+          <div class="resume-item">
+            <h4>English Upper Intermediate</h4>
+            <p><em>Bailiwick, SJRP, SP</em></p>
+            <p>Curso de inglês com foco em conversação e gramática.</p>
+          </div>
+          <div class="resume-item">
+            <h4>Projeto Sempre em Frente</h4>
+            <p><em>ACIRP, SJRP, SP</em></p>
+            <p>Curso de empreendedorismo e inovação.</p>
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <h3 class="resume-title">Experiência Profissional</h3>
           <div class="resume-item">
-            <h4>Senior graphic design specialist</h4>
-            <h5>2019 - Present</h5>
-            <p><em>Experion, New York, NY </em></p>
+            <h4>Estágiario em Desenvolvimento de Software</h4>
+            <h5>2023 - Atual</h5>
+            <p><em>Analítica 3M, Remoto</em></p>
             <p>
             <ul>
-              <li>Lead in the design, development, and implementation of the graphic, layout, and production communication materials</li>
-              <li>Delegate tasks to the 7 members of the design team and provide counsel on all aspects of the project. </li>
-              <li>Supervise the assessment of all graphic materials in order to ensure quality and accuracy of the design</li>
-              <li>Oversee the efficient use of production project budgets ranging from $2,000 - $25,000</li>
+              <li>Desenvolvimento de aplicações web</li>
+              <li>Manutenção e correção de bugs</li>
+              <li>Desenvolvimento de novas funcionalidades</li>
+              <li>Desenvolvimento de APIs</li>
+              <li>Tecnologias utilizadas: React, TypeScript, Node.js, Express, Php, PhpMyAdmin, Material-UI, API REST, Websockets, Scss, Tailwind</li>
             </ul>
             </p>
           </div>
           <div class="resume-item">
-            <h4>Graphic design specialist</h4>
-            <h5>2017 - 2018</h5>
-            <p><em>Stepping Stone Advertising, New York, NY</em></p>
+            <h4>Desenvolvedor Web Freelancer</h4>
+            <h5>2023</h5>
+            <p><em>Remoto</em></p>
             <p>
             <ul>
-              <li>Developed numerous marketing programs (logos, brochures,infographics, presentations, and advertisements).</li>
-              <li>Managed up to 5 projects or tasks at a given time while under pressure</li>
-              <li>Recommended and consulted with clients on the most appropriate graphic design</li>
-              <li>Created 4+ design presentations and proposals a month for clients and account managers</li>
+              <li>Desenvolvimento de aplicações web</li>
+              <li>Tecnologias utilizadas: React, TypeScript, Node.js, API REST, Material-UI</li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Estágiario em Desenvolvimento de Software</h4>
+            <h5>2022 - 2023</h5>
+            <p><em>TechTrust Soluções em TI e Processos, Presencial, SJRP, SP</em></p>
+            <p>
+            <ul>
+              <li>Desenvolvimento e manutenção de aplicações web</li>
+              <li>Manutenção e correção de bugs</li>
+              <li>Desenvolvimento de novas funcionalidades</li>
+              <li>Atendimento ao cliente</li>
+              <li>Tecnologias utilizadas: Html, Css, JQuery, JavaScript, Php, Bootstrap, PostgreSQL, Ajax</li>
             </ul>
             </p>
           </div>
@@ -530,15 +562,19 @@
     <div class="container">
 
       <div class="section-title">
-        <h2>Portfolio</h2>
-        <p>My Works</p>
+        <!-- Projects -->
+        <h2>Projetos</h2>
+        <!-- My Projects -->
+        <p>Meus Projetos</p>
       </div>
 
       <div class="row">
         <div class="col-lg-12 d-flex justify-content-center">
           <ul id="portfolio-flters">
-            <li data-filter="*" class="filter-active">All</li>
+            <!-- All -->
+            <li data-filter="*" class="filter-active">Todos</li>
             <li data-filter=".filter-react">React</li>
+            <li data-filter=".filter-angular">Angular</li>
             <li data-filter=".filter-javascript">JavaScript</li>
             <li data-filter=".filter-typescript">TypeScript</li>
           </ul>
@@ -647,8 +683,10 @@
 
   <!-- ======= Credits Section ======= -->
   <div class="credits">
-    Developed by <a href="https://github.com/matheus-lima-moreira" target="_blank">Mattsz</a><br>
-    Designed by <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
+    <!-- Developed by -->
+    Desenvolvido por <a href="https://github.com/matheus-lima-moreira" target="_blank">Mattsz</a><br>
+    <!-- Designed by -->
+    Design por <a href="https://bootstrapmade.com/" target="_blank">BootstrapMade</a>
   </div>
   <!-- End Credits Section -->
 
