--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -53,9 +53,11 @@
           <div class="col-lg-4 portfolio-info">
             <h2 id="portfolio-title">Project information</h2>
             <ul>
-              <li><strong>Technologies</strong>:  <span id="technologies"></span> </li>
+              <!-- Technologies -->
+              <li><strong>Técnologias</strong>:  <span id="technologies"></span> </li>
               <li><strong>URL</strong>: <a id="link" target="_blank"></a></li>
-              <li><strong>Code</strong>: <a id="github" target="_blank"></a></li>
+              <!-- Code -->
+              <li><strong>Código</strong>: <a id="github" target="_blank"></a></li>
             </ul>
 
             <p id="description">
